Implement video cnn feature

--- a/WorkoutDetector/similarity_image.ipynb
+++ b/WorkoutDetector/similarity_image.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,25 +181,22 @@
     "from torchvision.io import read_image\n",
     "from torch.utils.data import DataLoader, Dataset\n",
     "import sklearn.metrics.pairwise as pw\n",
+    "from torchvision.models.feature_extraction import get_graph_node_names, create_feature_extractor\n",
+    "import timm\n",
     "import gc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('layer4.2.relu', ReLU(inplace=True)),\n",
-       " ('avgpool', AdaptiveAvgPool2d(output_size=(1, 1))),\n",
-       " ('fc', Linear(in_features=2048, out_features=1000, bias=True))]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['flatten', torch.Size([2, 2048])]]\n"
+     ]
     }
    ],
    "source": [
@@ -215,7 +212,18 @@
     "}\n",
     "\n",
     "model = models.resnet50(pretrained=True)\n",
-    "list(model.named_modules())[-3:]"
+    "train_nodes, _ = get_graph_node_names(model)\n",
+    "return_nodes = {\n",
+    "    'layer1': 'layer1',\n",
+    "    'layer2': 'layer2',\n",
+    "    'layer3': 'layer3',\n",
+    "    'layer4': 'layer4',\n",
+    "}\n",
+    "fx = create_feature_extractor(model, return_nodes={'flatten': 'flatten'})\n",
+    "\n",
+    "i = torch.randn(2, 3, 224, 224)\n",
+    "o = fx(i)\n",
+    "print([[k, v.shape] for k,v in o.items()])"
    ]
   },
   {
@@ -316,15 +324,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1100\n",
-      "/home/umi/projects/WorkoutDetector/data/RepCount/videos/val/stu11_36.mp4\n"
+      "140\n",
+      "/home/umi/projects/WorkoutDetector/data/RepCount/videos/val/test2349.mp4\n",
+      "{'video': {'duration': [10.0], 'fps': [14.0]}, 'audio': {'duration': [], 'framerate': []}, 'subtitles': {'duration': []}, 'cc': {'duration': []}}\n"
      ]
     }
    ],
@@ -333,17 +342,33 @@
     "rand_anno = repcount.get_random_pose()\n",
     "rand_path = repcount.get_video(rand_anno['frame_dir'])\n",
     "print(rand_anno['total_frames'])\n",
-    "print(rand_path)"
+    "print(rand_path)\n",
+    "vid = torchvision.io.VideoReader(rand_path)\n",
+    "print(vid.get_metadata())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'VideoReader' object has no attribute 'nframes'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/umi/projects/WorkoutDetector/WorkoutDetector/similarity_image.ipynb Cell 20'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/umi/projects/WorkoutDetector/WorkoutDetector/similarity_image.ipynb#ch0000019vscode-remote?line=0'>1</a>\u001b[0m \u001b[39m# gc.collect()\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/umi/projects/WorkoutDetector/WorkoutDetector/similarity_image.ipynb#ch0000019vscode-remote?line=1'>2</a>\u001b[0m model \u001b[39m=\u001b[39m models\u001b[39m.\u001b[39mresnet50(pretrained\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/umi/projects/WorkoutDetector/WorkoutDetector/similarity_image.ipynb#ch0000019vscode-remote?line=2'>3</a>\u001b[0m feats \u001b[39m=\u001b[39m video_feature(model, rand_path)\n",
+      "File \u001b[0;32m~/projects/WorkoutDetector/WorkoutDetector/utils/common.py:91\u001b[0m, in \u001b[0;36mvideo_feature\u001b[0;34m(model, video_path, device)\u001b[0m\n\u001b[1;32m     <a href='file:///home/umi/projects/WorkoutDetector/WorkoutDetector/utils/common.py?line=88'>89</a>\u001b[0m \u001b[39m\"\"\"Video feature extractor\"\"\"\u001b[39;00m\n\u001b[1;32m     <a href='file:///home/umi/projects/WorkoutDetector/WorkoutDetector/utils/common.py?line=89'>90</a>\u001b[0m vid \u001b[39m=\u001b[39m torchvision\u001b[39m.\u001b[39mio\u001b[39m.\u001b[39mVideoReader(video_path)\n\u001b[0;32m---> <a href='file:///home/umi/projects/WorkoutDetector/WorkoutDetector/utils/common.py?line=90'>91</a>\u001b[0m num_frame \u001b[39m=\u001b[39m vid\u001b[39m.\u001b[39;49mnframes\n\u001b[1;32m     <a href='file:///home/umi/projects/WorkoutDetector/WorkoutDetector/utils/common.py?line=91'>92</a>\u001b[0m feat \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mzeros((num_frame, \u001b[39m2048\u001b[39m))\n\u001b[1;32m     <a href='file:///home/umi/projects/WorkoutDetector/WorkoutDetector/utils/common.py?line=92'>93</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(num_frame):\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'VideoReader' object has no attribute 'nframes'"
+     ]
+    }
+   ],
    "source": [
-    "gc.collect()\n",
-    "feats = get_feats(rand_path)"
+    "# gc.collect()\n",
+    "model = models.resnet50(pretrained=True)\n",
+    "feats = video_feature(model, rand_path)"
    ]
   },
   {
@@ -367,15 +392,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "300\n",
-      "/home/umi/projects/WorkoutDetector/data/Countix/videos/train/dh7h-JxMpvE.mp4\n"
+     "ename": "NameError",
+     "evalue": "name 'Countix' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/umi/projects/WorkoutDetector/WorkoutDetector/similarity_image.ipynb Cell 23'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/umi/projects/WorkoutDetector/WorkoutDetector/similarity_image.ipynb#ch0000022vscode-remote?line=0'>1</a>\u001b[0m countix \u001b[39m=\u001b[39m Countix()\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/umi/projects/WorkoutDetector/WorkoutDetector/similarity_image.ipynb#ch0000022vscode-remote?line=1'>2</a>\u001b[0m countix_anno \u001b[39m=\u001b[39m countix\u001b[39m.\u001b[39mget_random_pose()\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/umi/projects/WorkoutDetector/WorkoutDetector/similarity_image.ipynb#ch0000022vscode-remote?line=2'>3</a>\u001b[0m countix_path \u001b[39m=\u001b[39m countix\u001b[39m.\u001b[39mget_video(countix_anno[\u001b[39m'\u001b[39m\u001b[39mframe_dir\u001b[39m\u001b[39m'\u001b[39m])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Countix' is not defined"
      ]
     }
    ],
