Add image dataset class

--- a/WorkoutDetector/RepCount_data_process.ipynb
+++ b/WorkoutDetector/RepCount_data_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
     }
    ],
    "source": [
-    "datadir = 'data/RepCountA'\n",
+    "datadir = 'data/RepCount'\n",
     "train_csv = os.path.join(datadir, 'annotation/train.csv')\n",
     "test_csv = os.path.join(datadir, 'annotation/test.csv')\n",
     "val_csv = os.path.join(datadir, 'annotation/valid.csv')\n",
