🔥Add Repcount dataset class Mod Repcount data process (This is the last time hopefully)

--- a/WorkoutDetector/RepCount_data_process.ipynb
+++ b/WorkoutDetector/RepCount_data_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "[5 rows x 305 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,6 +235,8 @@
     "print(len(train_df), len(test_df), len(val_df))\n",
     "print('total:', len(train_df) + len(test_df) + len(val_df))\n",
     "\n",
+    "\n",
+    "train_df.dropna(subset=['count'], inplace=True)\n",
     "train_df.head()"
    ]
   },
@@ -247,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +323,7 @@
        "779  squat  REjznoKN8Q8_188.mp4  REjznoKN8Q8      8  stu8_75"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +463,7 @@
        "4  FyGBSs1X1qM_105.mp4  FyGBSs1X1qM      3   stu3_1  114.0  105.0   stu3_1.mp4"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,165 +477,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 214,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>type</th>\n",
-       "      <th>name</th>\n",
-       "      <th>count</th>\n",
-       "      <th>reps</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>frontraise</td>\n",
-       "      <td>train951.mp4</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>[6.0, 72.0, 72.0, 132.0, 132.0, 204.0, 204.0, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>frontraise</td>\n",
-       "      <td>train952.mp4</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>[13.0, 62.0, 62.0, 103.0, 103.0, 126.0, 126.0,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>pullups</td>\n",
-       "      <td>test1463.mp4</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>[21.0, 60.0, 60.0, 98.0, 98.0, 132.0, 132.0, 1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>squant</td>\n",
-       "      <td>test2340.mp4</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>[0.0, 86.0, 86.0, 155.0, 155.0, 218.0, 219.0, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>front_raise</td>\n",
-       "      <td>stu5_11.mp4</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>[104.0, 179.0, 179.0, 255.0, 255.0, 330.0, 426...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>753</th>\n",
-       "      <td>others</td>\n",
-       "      <td>stu13_5.mp4</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>[5.0, 45.0, 45.0, 84.0, 84.0, 125.0, 125.0, 16...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>754</th>\n",
-       "      <td>others</td>\n",
-       "      <td>stu13_6.mp4</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>[5.0, 49.0, 50.0, 89.0, 90.0, 133.0, 133.0, 17...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>755</th>\n",
-       "      <td>pommelhorse</td>\n",
-       "      <td>stu13_7.mp4</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>[17.0, 44.0, 44.0, 69.0, 69.0, 96.0, 96.0, 121...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>756</th>\n",
-       "      <td>pommelhorse</td>\n",
-       "      <td>stu13_8.mp4</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>[0.0, 24.0, 24.0, 47.0, 47.0, 68.0, 69.0, 91.0...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>757</th>\n",
-       "      <td>pommelhorse</td>\n",
-       "      <td>stu13_9.mp4</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>[6.0, 35.0, 35.0, 62.0, 62.0, 99.0, 100.0, 129...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>758 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            type          name  count  \\\n",
-       "0     frontraise  train951.mp4    4.0   \n",
-       "1     frontraise  train952.mp4   10.0   \n",
-       "2        pullups  test1463.mp4    7.0   \n",
-       "3         squant  test2340.mp4    4.0   \n",
-       "4    front_raise   stu5_11.mp4    6.0   \n",
-       "..           ...           ...    ...   \n",
-       "753       others   stu13_5.mp4    5.0   \n",
-       "754       others   stu13_6.mp4    6.0   \n",
-       "755  pommelhorse   stu13_7.mp4   30.0   \n",
-       "756  pommelhorse   stu13_8.mp4   16.0   \n",
-       "757  pommelhorse   stu13_9.mp4   34.0   \n",
-       "\n",
-       "                                                  reps  \n",
-       "0    [6.0, 72.0, 72.0, 132.0, 132.0, 204.0, 204.0, ...  \n",
-       "1    [13.0, 62.0, 62.0, 103.0, 103.0, 126.0, 126.0,...  \n",
-       "2    [21.0, 60.0, 60.0, 98.0, 98.0, 132.0, 132.0, 1...  \n",
-       "3    [0.0, 86.0, 86.0, 155.0, 155.0, 218.0, 219.0, ...  \n",
-       "4    [104.0, 179.0, 179.0, 255.0, 255.0, 330.0, 426...  \n",
-       "..                                                 ...  \n",
-       "753  [5.0, 45.0, 45.0, 84.0, 84.0, 125.0, 125.0, 16...  \n",
-       "754  [5.0, 49.0, 50.0, 89.0, 90.0, 133.0, 133.0, 17...  \n",
-       "755  [17.0, 44.0, 44.0, 69.0, 69.0, 96.0, 96.0, 121...  \n",
-       "756  [0.0, 24.0, 24.0, 47.0, 47.0, 68.0, 69.0, 91.0...  \n",
-       "757  [6.0, 35.0, 35.0, 62.0, 62.0, 99.0, 100.0, 129...  \n",
-       "\n",
-       "[758 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# reps to one column\n",
     "\n",
     "train_df['reps'] = train_df[train_df.columns[3:]].values.tolist()\n",
     "train_df.drop(train_df.columns[3:-1], axis=1, inplace=True)\n",
-    "train_df"
+    "val_df['reps'] = val_df[val_df.columns[3:]].values.tolist()\n",
+    "val_df.drop(val_df.columns[3:-1], axis=1, inplace=True)\n",
+    "test_df['reps'] = test_df[test_df.columns[3:]].values.tolist()\n",
+    "test_df.drop(test_df.columns[3:-1], axis=1, inplace=True)\n",
+    "\n",
+    "# train_df.apply(lambda x: print(int(x['count'])), axis=1)\n",
+    "\n",
+    "train_df['reps'] = train_df.apply(lambda x: ' '.join([str(int(y)) for y in x.reps[:int(x['count'])]]), axis=1)\n",
+    "val_df['reps'] = val_df.apply(lambda x: ' '.join([str(int(y)) for y in x.reps[:int(x['count'])]]), axis=1)\n",
+    "test_df['reps'] = test_df.apply(lambda x: ' '.join([str(int(y)) for y in x.reps[:int(x['count'])]]), axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,14 +522,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "509 91 109\n"
+      "508 91 109\n"
      ]
     }
    ],
@@ -682,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +693,7 @@
        "0     battle_rope           13          3           0"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -900,58 +766,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>front_raise</td>\n",
-       "      <td>train</td>\n",
-       "      <td>train951.mp4</td>\n",
+       "      <td>situp</td>\n",
+       "      <td>test</td>\n",
+       "      <td>train3344.mp4</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>[6.0, 72.0, 72.0, 132.0, 132.0, 204.0, 204.0, ...</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1 23 23 40 40 58 59 75 75 92 92 109 109 126</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>front_raise</td>\n",
-       "      <td>train</td>\n",
-       "      <td>train952.mp4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>[13.0, 62.0, 62.0, 103.0, 103.0, 126.0, 126.0,...</td>\n",
+       "      <td>push_up</td>\n",
+       "      <td>test</td>\n",
+       "      <td>stu8_42.mp4</td>\n",
+       "      <td>BVuI-syjR6A</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0 42 42 88 88 142</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>pull_up</td>\n",
-       "      <td>train</td>\n",
-       "      <td>test1463.mp4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>[21.0, 60.0, 60.0, 98.0, 98.0, 132.0, 132.0, 1...</td>\n",
+       "      <td>test</td>\n",
+       "      <td>stu2_39.mp4</td>\n",
+       "      <td>BU-X16wG-Jo</td>\n",
+       "      <td>138.0</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>41 109 109 190 190 258</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>squat</td>\n",
-       "      <td>train</td>\n",
-       "      <td>test2340.mp4</td>\n",
+       "      <td>bench_pressing</td>\n",
+       "      <td>test</td>\n",
+       "      <td>train151.mp4</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>[0.0, 86.0, 86.0, 155.0, 155.0, 218.0, 219.0, ...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>13 33 33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>front_raise</td>\n",
-       "      <td>train</td>\n",
-       "      <td>stu5_11.mp4</td>\n",
-       "      <td>0_b43RbenY8</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>[104.0, 179.0, 179.0, 255.0, 255.0, 330.0, 426...</td>\n",
+       "      <td>jump_jack</td>\n",
+       "      <td>test</td>\n",
+       "      <td>train1615.mp4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0 25 27 57 58 85 87 117 118 148</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -973,7 +839,7 @@
        "      <td>40.0</td>\n",
        "      <td>53.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2 53 53 106 106 160 160</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>133</th>\n",
@@ -984,7 +850,7 @@
        "      <td>70.0</td>\n",
        "      <td>112.0</td>\n",
        "      <td>19.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>37 82 82 132 132 196 196 244 244 295 295 340 3...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>134</th>\n",
@@ -995,7 +861,7 @@
        "      <td>62.0</td>\n",
        "      <td>120.0</td>\n",
        "      <td>37.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>84 104 105 132 132 156 156 187 188 214 215 241...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>135</th>\n",
@@ -1006,7 +872,7 @@
        "      <td>90.0</td>\n",
        "      <td>123.0</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>121 438 440 535</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>136</th>\n",
@@ -1017,44 +883,44 @@
        "      <td>104.0</td>\n",
        "      <td>140.0</td>\n",
        "      <td>9.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>52 109 109 165 165 245 245 315 840</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>831 rows × 8 columns</p>\n",
+       "<p>116 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              class  split          name          vid  start    end  count  \\\n",
-       "0       front_raise  train  train951.mp4          NaN    NaN    NaN    4.0   \n",
-       "1       front_raise  train  train952.mp4          NaN    NaN    NaN   10.0   \n",
-       "2           pull_up  train  test1463.mp4          NaN    NaN    NaN    7.0   \n",
-       "3             squat  train  test2340.mp4          NaN    NaN    NaN    4.0   \n",
-       "4       front_raise  train   stu5_11.mp4  0_b43RbenY8   34.0   70.0    6.0   \n",
-       "..              ...    ...           ...          ...    ...    ...    ...   \n",
-       "132           situp   test   stu8_57.mp4  zoL7eingzkQ   40.0   53.0    7.0   \n",
-       "133         push_up   test   stu8_46.mp4  wS6Kp3k-zV8   70.0  112.0   19.0   \n",
-       "134         push_up   test   stu4_47.mp4  t0QZmiXBC-Q   62.0  120.0   37.0   \n",
-       "135  bench_pressing   test    stu2_6.mp4  QxLPG9FwAUU   90.0  123.0    4.0   \n",
-       "136         pull_up   test   stu1_36.mp4  ok0F_-opRFo  104.0  140.0    9.0   \n",
+       "              class split           name          vid  start    end  count  \\\n",
+       "0             situp  test  train3344.mp4          NaN    NaN    NaN   14.0   \n",
+       "1           push_up  test    stu8_42.mp4  BVuI-syjR6A    0.0   15.0    6.0   \n",
+       "2           pull_up  test    stu2_39.mp4  BU-X16wG-Jo  138.0  156.0    6.0   \n",
+       "3    bench_pressing  test   train151.mp4          NaN    NaN    NaN    3.0   \n",
+       "4         jump_jack  test  train1615.mp4          NaN    NaN    NaN   10.0   \n",
+       "..              ...   ...            ...          ...    ...    ...    ...   \n",
+       "132           situp  test    stu8_57.mp4  zoL7eingzkQ   40.0   53.0    7.0   \n",
+       "133         push_up  test    stu8_46.mp4  wS6Kp3k-zV8   70.0  112.0   19.0   \n",
+       "134         push_up  test    stu4_47.mp4  t0QZmiXBC-Q   62.0  120.0   37.0   \n",
+       "135  bench_pressing  test     stu2_6.mp4  QxLPG9FwAUU   90.0  123.0    4.0   \n",
+       "136         pull_up  test    stu1_36.mp4  ok0F_-opRFo  104.0  140.0    9.0   \n",
        "\n",
        "                                                  reps  \n",
-       "0    [6.0, 72.0, 72.0, 132.0, 132.0, 204.0, 204.0, ...  \n",
-       "1    [13.0, 62.0, 62.0, 103.0, 103.0, 126.0, 126.0,...  \n",
-       "2    [21.0, 60.0, 60.0, 98.0, 98.0, 132.0, 132.0, 1...  \n",
-       "3    [0.0, 86.0, 86.0, 155.0, 155.0, 218.0, 219.0, ...  \n",
-       "4    [104.0, 179.0, 179.0, 255.0, 255.0, 330.0, 426...  \n",
+       "0          1 23 23 40 40 58 59 75 75 92 92 109 109 126  \n",
+       "1                                    0 42 42 88 88 142  \n",
+       "2                               41 109 109 190 190 258  \n",
+       "3                                             13 33 33  \n",
+       "4                      0 25 27 57 58 85 87 117 118 148  \n",
        "..                                                 ...  \n",
-       "132                                                NaN  \n",
-       "133                                                NaN  \n",
-       "134                                                NaN  \n",
-       "135                                                NaN  \n",
-       "136                                                NaN  \n",
+       "132                            2 53 53 106 106 160 160  \n",
+       "133  37 82 82 132 132 196 196 244 244 295 295 340 3...  \n",
+       "134  84 104 105 132 132 156 156 187 188 214 215 241...  \n",
+       "135                                    121 438 440 535  \n",
+       "136                 52 109 109 165 165 245 245 315 840  \n",
        "\n",
-       "[831 rows x 8 columns]"
+       "[116 rows x 8 columns]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,12 +939,13 @@
     "keep_cols = ['class', 'split', 'name', 'vid', 'start', 'end', 'count', 'reps']\n",
     "\n",
     "all_df = all_df[keep_cols]\n",
-    "all_df"
+    "\n",
+    "all_df[all_df['split']=='test']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
