--- a/WorkoutDetector/RepCount_data_process.ipynb
+++ b/WorkoutDetector/RepCount_data_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -75,18 +75,10 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>frontraise</td>\n",
-       "      <td>train951.mp4</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>132.0</td>\n",
-       "      <td>132.0</td>\n",
-       "      <td>204.0</td>\n",
-       "      <td>204.0</td>\n",
-       "      <td>...</td>\n",
+       "      <th>9</th>\n",
+       "      <td>benchpressing</td>\n",
+       "      <td>train143.mp4</td>\n",
+       "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -94,94 +86,6 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>frontraise</td>\n",
-       "      <td>train952.mp4</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>103.0</td>\n",
-       "      <td>103.0</td>\n",
-       "      <td>126.0</td>\n",
-       "      <td>126.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>pullups</td>\n",
-       "      <td>test1463.mp4</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>132.0</td>\n",
-       "      <td>132.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>squant</td>\n",
-       "      <td>test2340.mp4</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>86.0</td>\n",
-       "      <td>86.0</td>\n",
-       "      <td>155.0</td>\n",
-       "      <td>155.0</td>\n",
-       "      <td>218.0</td>\n",
-       "      <td>219.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>front_raise</td>\n",
-       "      <td>stu5_11.mp4</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>104.0</td>\n",
-       "      <td>179.0</td>\n",
-       "      <td>179.0</td>\n",
-       "      <td>255.0</td>\n",
-       "      <td>255.0</td>\n",
-       "      <td>330.0</td>\n",
-       "      <td>426.0</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -196,28 +100,20 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 305 columns</p>\n",
+       "<p>1 rows × 305 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          type          name  count     L1     L2     L3     L4     L5     L6  \\\n",
-       "0   frontraise  train951.mp4    4.0    6.0   72.0   72.0  132.0  132.0  204.0   \n",
-       "1   frontraise  train952.mp4   10.0   13.0   62.0   62.0  103.0  103.0  126.0   \n",
-       "2      pullups  test1463.mp4    7.0   21.0   60.0   60.0   98.0   98.0  132.0   \n",
-       "3       squant  test2340.mp4    4.0    0.0   86.0   86.0  155.0  155.0  218.0   \n",
-       "4  front_raise   stu5_11.mp4    6.0  104.0  179.0  179.0  255.0  255.0  330.0   \n",
+       "            type          name  count  L1  L2  L3  L4  L5  L6  L7  ...  L293  \\\n",
+       "9  benchpressing  train143.mp4      0 NaN NaN NaN NaN NaN NaN NaN  ...   NaN   \n",
        "\n",
-       "      L7  ...  L293  L294  L295  L296  L297  L298  L299  L300  L301  L302  \n",
-       "0  204.0  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
-       "1  126.0  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
-       "2  132.0  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
-       "3  219.0  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
-       "4  426.0  ...   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "   L294  L295  L296  L297  L298  L299  L300  L301  L302  \n",
+       "9   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
        "\n",
-       "[5 rows x 305 columns]"
+       "[1 rows x 305 columns]"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +133,8 @@
     "\n",
     "\n",
     "train_df.dropna(subset=['count'], inplace=True)\n",
-    "train_df.head()"
+    "train_df.head()\n",
+    "test_df[test_df['name'] == 'train143.mp4']"
    ]
   },
   {
